--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Testing Google Maps API</title>
+    <link rel="stylesheet" href="style.css">
+    <title>My Google Map</title>
 </head>
 <body>
-    
+    <h1>My Google Map</h1>
+    <div id="map"></div>
+
+    <script>
+        function initMap(){
+            // Map options
+            var options = {
+                zoom: 15,
+                center: {lat: 55.746889, lng: 37.858888}
+            }
+            // New map
+            var map = new google.maps.Map(document.getElementById('map'), options);
+
+            //Add marker
+            var marker = new google.maps.Marker({
+                position: {lat: 55.746889, lng: 37.858888},
+                map: map,
+                icon: './russia.png'
+                });
+
+            //Add info window
+
+            var infoWindow = new google.maps.InfoWindow({
+                content: '<h2>Workspace</h2>'
+            });
+
+            marker.addListener('click', function() {
+                infoWindow.open(map, marker);
+            });
+        }
+    </script>
+
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1WOK5jLPX266cmnNe6gpjQTcuQ-kYW3Y&callback=initMap">
+    </script>
 </body>
 </html>
